authentication, exception handling, and routes