@@ -1,11 +1,14 @@
 package tlcmarketplace.carrental.auth;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.stereotype.Component;
@@ -32,21 +35,23 @@ public class JwtFilter extends OncePerRequestFilter {
     protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain chain)
             throws ServletException, IOException {
         String token = request.getHeader("Authorization");
-        // logger.info("Printing token: " + token);
         if (token != null && token.startsWith("Bearer ")) {
             token = token.substring(7);
-            logger.info("Token: " + token);
             try {
+                // Parse the JWT token
                 Claims claims = Jwts.parserBuilder()
                         .setSigningKey(Keys.hmacShaKeyFor(SECRET_KEY.getBytes()))
                         .build()
                         .parseClaimsJws(token)
                         .getBody();
-                logger.info("Here");
-                String email = claims.getSubject();
-                User user = new User(email, "", Collections.emptyList());
+
+                String email = claims.get("email", String.class);
+
+                //assign "ROLE_USER" role to the user
+                List<GrantedAuthority> authorities = List.of(new SimpleGrantedAuthority("ROLE_USER"));
+                User user = new User(email, "", authorities);
                 SecurityContextHolder.getContext().setAuthentication(
-                        new org.springframework.security.authentication.UsernamePasswordAuthenticationToken(user, null, Collections.emptyList())
+                        new org.springframework.security.authentication.UsernamePasswordAuthenticationToken(user, null, authorities)
                 );
             } catch (Exception e) {
                 logger.info("Login error: " + e);
@@ -54,6 +59,8 @@ public class JwtFilter extends OncePerRequestFilter {
                 return;
             }
         }
+        Authentication auth = SecurityContextHolder.getContext().getAuthentication();
+        logger.info("Authenticated user: " + auth);
         chain.doFilter(request, response);
     }
 }
